--- a/jupyter_notebook/pandas_entrance.ipynb
+++ b/jupyter_notebook/pandas_entrance.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,23 @@
     "\n",
     "# df1 = pd.read_csv(\"./trainset/pcdata_0611.csv\") \n",
     "# read_sql read_html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### read_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spcify type for column1\n",
+    "df1 = pd.read_csv(\"./trainset/pcdata_0611.csv\", {\"column1\": str}) "
    ]
   },
   {
@@ -2805,6 +2822,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019\n",
+      "2018\n",
+      "2017\n",
+      "2016\n",
+      "2015\n",
+      "2014\n",
+      "2013\n",
+      "2012\n",
+      "2011\n",
+      "2010\n",
+      "2009\n",
+      "2008\n",
+      "2007\n",
+      "2006\n",
+      "2005\n",
+      "2004\n",
+      "2003\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3888,15 +3954,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2000-01-01', '2000-01-02', '2000-01-03', '2000-01-04',\n",
+       "               '2000-01-05', '2000-01-06', '2000-01-07', '2000-01-08'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pandas_datareader import data, wb\n",
     "import numpy as np\n",
-    "start = datetime.datetime(2010, 1, 1)\n",
-    "end = datetime.datetime(2017, 1, 1)\n",
-    "df = data.get_data_yahoo('MS', start, end)\n"
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# start = datetime.datetime(2010, 1, 1)\n",
+    "# end = datetime.datetime(2017, 1, 1)\n",
+    "# df = data.get_data_yahoo('MS', start, end)\n",
+    "\n",
+    "# type(datetime.today().year)\n",
+    "# for y in reversed(range(2003, 2020)):\n",
+    "#     print y\n",
+    "\n",
+    "dates = pd.date_range('1/1/2000', periods=8)\n",
+    "dates\n",
+    "# df = pd.DataFrame(np.random.randn(8, 4), index=dates, columns=['A', 'B', 'C', 'D'])\n",
+    "# df\n",
+    "\n",
+    "\n",
+    "# pd.date_range(start='2019-01-01', end='2019-03-01')\n"
    ]
   },
   {
