--- a/jupyter_notebook/consensu_adjust_monitor.ipynb
+++ b/jupyter_notebook/consensu_adjust_monitor.ipynb
@@ -26,7 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stg\n",
+    "MONGO=\"mongodb://app_dataifs_rw:HYTENk36mSYWg2r1n@mongodb01.wmcloud-stg.com,mongodb02.wmcloud-stg.com,mongodb03.wmcloud-stg.com/dataifs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{u'_id': ObjectId('5cee4b993bc44f00160180c0'),\n",
-       " u'date': u'2019-05-29',\n",
-       " u'status': u'done'}"
+       "{u'_id': ObjectId('5d1aea199f84ffb7a05f9d9d'),\n",
+       " u'date': u'2016-01-01',\n",
+       " u'pop_ip': u'10.42.4.77',\n",
+       " u'put_ip': u'10.42.4.77',\n",
+       " u'service': u'history_rating_adjust',\n",
+       " u'status': u'done',\n",
+       " u'time1': 1575409168.9308424,\n",
+       " u'time2': 1575409169.5790834}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,29 +96,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{u'_id': ObjectId('5d1d9e119c8f3bd517ddbaa0'),\n",
-       " u'date': u'2016-01-01',\n",
-       " u'pop_ip': u'10.42.3.129',\n",
-       " u'put_ip': u'10.42.11.165',\n",
-       " u'service': u'history_rating_adjust',\n",
+       "{u'_id': ObjectId('5d1c729c7510a233738f910a'),\n",
+       " u'date': u'2017-11-01',\n",
+       " u'ip': u'10.42.4.78',\n",
+       " u'put_ip': u'10.20.103.59',\n",
+       " u'service': u'history_profit_adjust',\n",
        " u'status': u'wait',\n",
-       " u'time1': 1562813662.5383568,\n",
-       " u'time2': 1562813662.9725463}"
+       " u'time1': 1575379521.0544374,\n",
+       " u'time2': 1575379527.759712}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mongodb.get_collection(mcollection).find_one({\"status\" : \"wait\"})       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'_id': ObjectId('5d1c729a7510a233738f8e93'),\n",
+       " u'date': u'2016-02-10',\n",
+       " u'ip': u'10.42.4.78',\n",
+       " u'put_ip': u'10.42.4.78',\n",
+       " u'service': u'history_profit_adjust',\n",
+       " u'status': u'doing',\n",
+       " u'time1': 1575383129.9642777,\n",
+       " u'time2': 1573011978.410194}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mongodb.get_collection(mcollection).find_one({\"status\" : \"doing\"})       "
    ]
   },
   {
@@ -134,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4084"
+       "613"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
