--- a/jupyter_notebook/html-converter.ipynb
+++ b/jupyter_notebook/html-converter.ipynb
@@ -7799,6 +7799,333 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class MysqlConn(object):\n",
+    "    def __init__(self, config_json_str):\n",
+    "        # self.mysql_config = {\"host\": \"10.22.128.150\",  \"port\": 3317, \"db\": \"bigdata\", \"user\": \"talend_load\",\n",
+    "        #   \"passwd\": \"s9t5gNThn2vqWM7c\" , \"charset\" : \"utf8\"}\n",
+    "        # self.mysql_config = {\"host\": \"db-bigdata.wmcloud-qa.com\",  \"port\": 3312, \"db\": \"bigdata\", \"user\": \"app_bigdata_ro\",\n",
+    "        #   \"passwd\": \"Welcome_20141217\"}\n",
+    "        self.mysql_config = json.loads(config_json_str, encoding='utf-8')\n",
+    "\n",
+    "    def connect(self):\n",
+    "        mysql_conn = pymysql.connect(**self.mysql_config)\n",
+    "        return mysql_conn\n",
+    "\n",
+    "class MssqlConn(object):\n",
+    "    def __init__(self, config_json_str):\n",
+    "        # self.mssql_config = {\"server\": \"sh-datayesdb.wmcloud-dev.com\",  \"port\": 1433, \"database\": \"datayesdb\",\n",
+    "        #     \"user\": \"talend_load\", \"password\": \"Welcome01\"}\n",
+    "        self.mssql_config = json.loads(config_json_str, encoding='utf-8')\n",
+    "\n",
+    "    def connect(self):\n",
+    "        mssql_conn = pymssql.connect(**self.mssql_config)\n",
+    "        return mssql_conn\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return json.dumps(self.mssql_config, ensure_ascii=False, encoding='utf-8')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pymysql\n",
+    "import pymssql\n",
+    "import pandas as pd\n",
+    "# MySQL\n",
+    "# bigdata={\"host\":\"security03-dev.datayes.com\",\"port\":3306,\"user\":\"talend_load\",\"passwd\":\"NCph1G9BQT3DuQj\",\"db\":\"bigdata\",\"charset\":\"utf8\"}\n",
+    "# dateyesdbp\n",
+    "bigdata_conn={\"host\":\"db-bigdata.wmcloud.com\",\"port\":3317,\"user\":\"talend_load\",\"passwd\":\"s9t5gNThn2vqWM7c\",\"db\":\"bigdata\",\"charset\":\"utf8\"}\n",
+    "\n",
+    "bigdata_conn={\"host\":\"db-bigdata-ro.wmcloud.com\",\"port\":3312,\"user\":\"talend_load\",\"passwd\":\"s9t5gNThn2vqWM7c\",\"db\":\"bigdata\",\"charset\":\"utf8\"}\n",
+    "\n",
+    "\n",
+    "bigdata_conn = MysqlConn(json.dumps(bigdata_conn)).connect()\n",
+    "# dateyesdbp_conn = MysqlConn(json.dumps(d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql = \"select * from bigdata.report_htmls where publish_date > '2017-01-01' and publish_date < '2018-01-01'\"\n",
+    "df = pd.read_sql(sql, bigdata_conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(906219, 16)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>report_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tool</th>\n",
+       "      <th>html_s3_url</th>\n",
+       "      <th>convert_status</th>\n",
+       "      <th>convert_task_id</th>\n",
+       "      <th>file_size</th>\n",
+       "      <th>tried_counts</th>\n",
+       "      <th>report_type</th>\n",
+       "      <th>absolute_pdf_s3_url</th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>zs_auto_category</th>\n",
+       "      <th>error_reason</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>updated_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23389</td>\n",
+       "      <td>14781164</td>\n",
+       "      <td>關連交易 - 根據A股限制性股票激勵計劃向關連激勵對象授予限制性股票</td>\n",
+       "      <td>solid_pdf_tool</td>\n",
+       "      <td>/pipeline/data_report_html_so_ede830d864e23753...</td>\n",
+       "      <td>done</td>\n",
+       "      <td>1w1wdr5HscnRKtOgXmGd4Q</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2017-01-05 13:20:05</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016-10-11 17:47:14</td>\n",
+       "      <td>2016-10-12 09:56:19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  report_id                               title            tool  \\\n",
+       "0  23389   14781164  關連交易 - 根據A股限制性股票激勵計劃向關連激勵對象授予限制性股票  solid_pdf_tool   \n",
+       "\n",
+       "                                         html_s3_url convert_status  \\\n",
+       "0  /pipeline/data_report_html_so_ede830d864e23753...           done   \n",
+       "\n",
+       "          convert_task_id  file_size  tried_counts  report_type  \\\n",
+       "0  1w1wdr5HscnRKtOgXmGd4Q     1000.0             0          NaN   \n",
+       "\n",
+       "  absolute_pdf_s3_url        publish_date zs_auto_category error_reason  \\\n",
+       "0                None 2017-01-05 13:20:05             None         None   \n",
+       "\n",
+       "           created_at          updated_at  \n",
+       "0 2016-10-11 17:47:14 2016-10-12 09:56:19  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdf = df[~df.absolute_pdf_s3_url.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdf = subdf.sort_values('publish_date').drop_duplicates('zs_auto_category', keep='last')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72, 16)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subdf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resdf = subdf[['report_id','publish_date','absolute_pdf_s3_url']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>report_id</th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>absolute_pdf_s3_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>67201</th>\n",
+       "      <td>16141652</td>\n",
+       "      <td>2017-05-06</td>\n",
+       "      <td>http://cluster-s3nginx-inner.datayes.com:80/pi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>626474</th>\n",
+       "      <td>16810886</td>\n",
+       "      <td>2017-10-26</td>\n",
+       "      <td>http://cluster-s3nginx-inner.datayes.com:80/pi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>645752</th>\n",
+       "      <td>16862353</td>\n",
+       "      <td>2017-11-07</td>\n",
+       "      <td>http://cluster-s3nginx-inner.datayes.com:80/pi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>665319</th>\n",
+       "      <td>16928344</td>\n",
+       "      <td>2017-11-28</td>\n",
+       "      <td>http://cluster-s3nginx-inner.datayes.com:80/pi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>683777</th>\n",
+       "      <td>18291473</td>\n",
+       "      <td>2017-12-14</td>\n",
+       "      <td>http://cluster-s3nginx-inner.datayes.com:80/pi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        report_id publish_date  \\\n",
+       "67201    16141652   2017-05-06   \n",
+       "626474   16810886   2017-10-26   \n",
+       "645752   16862353   2017-11-07   \n",
+       "665319   16928344   2017-11-28   \n",
+       "683777   18291473   2017-12-14   \n",
+       "\n",
+       "                                      absolute_pdf_s3_url  \n",
+       "67201   http://cluster-s3nginx-inner.datayes.com:80/pi...  \n",
+       "626474  http://cluster-s3nginx-inner.datayes.com:80/pi...  \n",
+       "645752  http://cluster-s3nginx-inner.datayes.com:80/pi...  \n",
+       "665319  http://cluster-s3nginx-inner.datayes.com:80/pi...  \n",
+       "683777  http://cluster-s3nginx-inner.datayes.com:80/pi...  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resdf.to_csv(\"template.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
