--- a/jupyter_notebook/boto/botos3.ipynb
+++ b/jupyter_notebook/boto/botos3.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
     "endpoint='https://apigateway.cn-northwest-1.amazonaws.com.cn'\n",
     "endpointPublic='https://apigateway.cn-northwest-1.amazonaws.com.cn'\n",
     "region='cn-northwest-1'\n",
-    "bucketName='ulp-aiinfo-test'\n",
+    "bucketName='ulp-learning'\n",
     "accessKey='AKIAP7LULSF2QSP5RJVA'\n",
     "secretKey='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'\n",
     "parallelism=8\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -466,9 +466,12 @@
      "output_type": "stream",
      "text": [
       "cfgl-guosen\n",
+      "crmshare\n",
       "pipeline-guosen\n",
+      "tengfei\n",
       "ulp-learning\n",
-      "ulp-learning-test\n"
+      "ulp-learning-test\n",
+      "xzs\n"
      ]
     }
    ],
@@ -481,32 +484,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "s3.Object(bucket_name='ulp-learning-test', key='test0218')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://apigateway.cn-northwest-1.amazonaws.com.cn/ulp-learning/2078d79384071009874da3bb9a276d5a.htm\n"
+     ]
     }
    ],
    "source": [
     "# Upload a new file\n",
-    "bucketname = 'ulp-learning-test'\n",
+    "# bucketname = 'ulp-learning-test'\n",
+    "key = '2078d79384071009874da3bb9a276d5a.htm'\n",
+    "guoxinBucket = guoxinS3.Bucket(bucketName)\n",
+    "data = open(key, 'rb')\n",
+    "guoxinBucket.put_object(Key=key, Body=data, ACL='public-read', ContentType='text/html')\n",
     "\n",
-    "guoxinBucket = guoxinS3.Bucket(bucketname)\n",
-    "data = open('hello.txt', 'rb')\n",
-    "guoxinBucket.put_object(Key='test0218', Body=data)"
+    "print(endpoint + '/' + bucketName + '/' + key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -518,6 +520,7 @@
     }
    ],
    "source": [
+    "# download\n",
     "import boto3\n",
     "import botocore\n",
     "\n",
@@ -527,7 +530,7 @@
     "# s3 = boto3.resource('s3')\n",
     "\n",
     "try:\n",
-    "    guoxinBucket.download_file('test0218', 'my_local.txt')\n",
+    "    guoxinBucket.download_file(key, 'my_local.htm')\n",
     "except botocore.exceptions.ClientError as e:\n",
     "    if e.response['Error']['Code'] == \"404\":\n",
     "        print(\"The object does not exist.\")\n",
