spider add landchina

--- a/jupyter_notebook/monitor-html-converter-management.ipynb
+++ b/jupyter_notebook/monitor-html-converter-management.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
@@ -297,23 +297,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3753"
+       "3582"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "mongo_db.get_collection(collection).find({\"guoxin\":0}).count()"
+    "mongo_db.get_collection(collection).find({\"guoxin\":0, \"publishDate\": '2019-12-26'}).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1729"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "mongo_db.get_collection(collection).find({\"guoxin\":0, \"publishDate\": '2019-12-27'}).count()"
    ]
   },
   {
@@ -399,6 +420,27 @@
    "source": [
     "\n",
     "mongo_db.get_collection(collection).update_many({\"reportId\":30451074}, {\"$set\":{\"guoxin\":0}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x5ec51c8>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "mongo_db.get_collection(collection).update_many({\"progress\":\"converting\"}, {\"$set\":{\"progress\":\"done\"}})"
    ]
   },
   {
