--- a/jupyter_notebook/monitor-html-converter-management.ipynb
+++ b/jupyter_notebook/monitor-html-converter-management.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -190,6 +190,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.getCollection('report_html').find({\"reportId\":27122397})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "scrolled": false
@@ -266,6 +275,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x10c92f48>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "mongo_db.get_collection(collection).update_many({\"taskId\":'f7bd63bb3ab720fa862c91bc6c30db25'},  {\"$set\":{\"progress\":'undo'}})       "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 153,
    "metadata": {},
    "outputs": [
@@ -287,12 +317,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'_id': ObjectId('5e1298183a768246c39efe59'),\n",
+       " u'converting': 1578276897.674,\n",
+       " u'guoxin': 1,\n",
+       " u'guoxinuploadtime': u'2020-01-06 10:16:45',\n",
+       " u'informed': 1578277067.821698,\n",
+       " u'insertTime': u'2020-01-06 10:14:48',\n",
+       " u'machine': u'10.42.3.184',\n",
+       " u'message': u'',\n",
+       " u'processTime': 1578277067.8216984,\n",
+       " u'progress': u'done',\n",
+       " u'publishDate': u'2020-01-06',\n",
+       " u'receiveTime': u'2020-01-06 10:14:48',\n",
+       " u'redo_convert': False,\n",
+       " u'reportId': 30488219,\n",
+       " u'report_type': 1,\n",
+       " u's3_address': u'http://cluster-s3nginx-inner.datayes.com:80/pipeline/report/2020-01-06/20200106_177ed0e06bc6b867fb6c91097200be2ed564cd509.pdf',\n",
+       " u's3key': u'/pipeline/data_report_html_4abac89c6f4e3a5e3c4ce9c5e848d106.html',\n",
+       " u'site': u'sh',\n",
+       " u'status': True,\n",
+       " u'taskId': u'f7bd63bb3ab720fa862c91bc6c30db25',\n",
+       " u'title': u'\\u5efa\\u53d1\\u80a1\\u4efd\\u516c\\u5f00\\u53d1\\u884c2020\\u5e74\\u516c\\u53f8\\u503a\\u5238(\\u7b2c\\u4e00\\u671f)\\u52df\\u96c6\\u8bf4\\u660e\\u4e66(\\u9762\\u5411\\u5408\\u683c\\u6295\\u8d44\\u8005)',\n",
+       " u'tool': u'datayes_api',\n",
+       " u'tried_count': 1,\n",
+       " u'uploading': 1578276994.426}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
-    "mongo_db.get_collection(collection).find_one({\"report_id\":'30458224'})     "
+    "mongo_db.get_collection(collection).find_one({\"taskId\":'f7bd63bb3ab720fa862c91bc6c30db25'})     "
    ]
   },
   {
